three.js in iframe implemented

--- a/sco.html
+++ b/sco.html
@@ -23,6 +23,9 @@
         </div>
     </header>
 
+    <iframe src="visual.html" frameborder="0" style="position: fixed;"></iframe>
+
+
     <section class="content">
         <section id="title">
             <h2>SCO</h2>
