--- a/home.html
+++ b/home.html
@@ -23,6 +23,8 @@
         </div>
     </header>
 
+    <iframe src="visual.html" frameborder="0"></iframe>
+
     <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -34,12 +36,12 @@
             <a href="sco.html">SCO</a>
         </div>
     </div>
-
+    
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.module.js"></script> -->
-    <script src="js/OrbitControls.js"></script>
+    <!-- <script src="js/OrbitControls.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 
