--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,700,700i&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
-                <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
-                <!-- <h1 style="color: white;">"LOGO"</h1> -->
+                <!-- <div class="logo"><a href="home.html" style="font-size: 38px; text-decoration: none;">Arsitech</a></div> -->
+                <!-- <h1 style="color: white;">Arsitech</h1> -->
                 <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             </div>
             <!-- <div class="headerplaceholder"></div> -->
