iframe scrollbar fix

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <iframe src="visual.html" frameborder="0"></iframe>
+    <iframe src="visual.html" frameborder="0" scrolling="no"></iframe>
 
     <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
     <div id="myNav" class="overlay">
