iframe implemented and dev page added

--- a/home.html
+++ b/home.html
@@ -23,14 +23,14 @@
         </div>
     </header>
 
-    <iframe src="visual.html" frameborder="0" scrolling="no"></iframe>
+    <iframe src="visual1.html" frameborder="0" scrolling="no"></iframe>
 
     <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="home.html">HOME</a>
-            <a href="#">DEV</a>
+            <a href="dev.html">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
             <a href="sco.html">SCO</a>
