--- a/dev.html
+++ b/dev.html
@@ -28,7 +28,8 @@
 
     <section class="content">
         <section id="title">
-            <h2>SCO</h2>
+            <h2 style="padding-top: 25%;font-weight: bold;
+            font-style: italic;">DEVELOPMENT</h2>
         </section>
 
         <br />
@@ -72,7 +73,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="home.html">HOME</a>
-            <a href="dev.html">DEV</a>
+            <a href="#">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
             <a href="sco.html">SCO</a>
