title anim implementation

--- a/sco.html
+++ b/sco.html
@@ -28,7 +28,8 @@
 
     <section class="content">
         <section id="title">
-            <h2>SCO</h2>
+            <!-- <p>STRATEGY</p><p>&</p><p>CONCEPTING</p> -->
+            SCO
         </section>
 
         <br />
