--- a/home.html
+++ b/home.html
@@ -31,9 +31,9 @@
         <div class="overlay-content">
             <a href="home.html">HOME</a>
             <a href="dev.html">DEV</a>
-            <a href="#">PTM</a>
-            <a href="#">UX</a>
+            <a href="ux.html">UX</a>
             <a href="sco.html">SCO</a>
+            <a href="ptm.html">PTM</a>
         </div>
     </div>
     
