--- a/sco.html
+++ b/sco.html
@@ -25,24 +25,27 @@
 
     <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
+    <div id="title">
+        SCO
+    </div>
 
     <section class="content">
-        <section id="title">
-            <h2>SCO</h2>
-        </section>
-
         <br />
 
         <section class="strategy">
             <h3>Strategy</h3>
             <article id="TargetAudience">
-            <h4>Target Audience</h4>
-            <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio, a mattis
-                lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis risus. Nunc
-                sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel pretium nec,
-                consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem. Proin
-                bibendum eros vel est iaculis faucibus.</p>
-            <p>[place holder for target audience assignment]</p>
+                <h4>Target Audience</h4>
+                <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio, a
+                    mattis
+                    lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis risus.
+                    Nunc
+                    sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel pretium
+                    nec,
+                    consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem.
+                    Proin
+                    bibendum eros vel est iaculis faucibus.</p>
+                <p>[place holder for target audience assignment]</p>
             </article>
         </section>
 
