--- a/dev.html
+++ b/dev.html
@@ -26,7 +26,7 @@
     <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
     <div id="title">
-        DEVELOPMENT
+        DEV
     </div>
 
     <section class="content">
