--- a/dev.html
+++ b/dev.html
@@ -19,7 +19,7 @@
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
                 <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             </div>
-            <!-- <div class="headerplaceholder"></div> -->
+            <div class="headerplaceholder"></div>
         </div>
     </header>
 
