--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-    <header>
+    <header style="position: fixed; border-bottom: 0px;">
         <div class="headercontainer">
             <span class="navButton" onclick="openNav()">&#9776;</span>
             <div class="logo">
