--- a/dev.html
+++ b/dev.html
@@ -25,13 +25,13 @@
 
     <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-    <div id="title">
+    <div id="title" title="Development">
         DEV
     </div>
 
     <section class="content">
         <article>
-            <h1>SPRINT 0</h1>
+            <h2>SPRINT 0</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse odio ante, ornare sed sem a,
                 fermentum
                 volutpat nunc. Praesent ipsum dui, finibus sit amet sapien non, semper porttitor dui. Nunc consequat
@@ -44,8 +44,9 @@
                 quis euismod varius. Integer commodo accumsan neque eu ullamcorper.
             </p>
         </article>
+        <hr>
         <article>
-            <h1>SPRINT 1</h1>
+            <h2>SPRINT 1</h2>
             <p>
 
                 Nulla convallis massa nibh, sit amet congue quam viverra bibendum. Praesent varius justo id egestas
@@ -55,8 +56,9 @@
                 sed
                 semper lorem lacinia vel. In ornare ex non luctus mollis.</p>
         </article>
+        <hr>
         <article>
-            <h1>SPRINT 2</h1>
+            <h2>SPRINT 2</h2>
             <p>
 
                 Sed ullamcorper elementum nunc at aliquam. Nullam ligula dui, placerat non lectus vitae, congue faucibus
