--- a/home.html
+++ b/home.html
@@ -25,76 +25,16 @@
 
     <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-    <div id="title">
-        DEV
-    </div>
-
-    <section class="content">
-        <article>
-            <h1>SPRINT 0</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse odio ante, ornare sed sem a,
-                fermentum
-                volutpat nunc. Praesent ipsum dui, finibus sit amet sapien non, semper porttitor dui. Nunc consequat
-                consectetur pulvinar. Mauris tincidunt condimentum porta. Curabitur eget nulla urna. Duis venenatis
-                lobortis
-                magna ut pulvinar. Duis quam quam, sodales eget purus nec, feugiat eleifend sem. Nam eget suscipit arcu.
-                Vestibulum tincidunt faucibus nunc, vel placerat eros congue sit amet. Pellentesque non dignissim nisi,
-                sed
-                aliquam purus. Suspendisse porttitor risus tortor, vitae vulputate velit auctor ac. Morbi sagittis metus
-                quis euismod varius. Integer commodo accumsan neque eu ullamcorper.
-            </p>
-        </article>
-        <article>
-            <h1>SPRINT 1</h1>
-            <p>
-
-                Nulla convallis massa nibh, sit amet congue quam viverra bibendum. Praesent varius justo id egestas
-                euismod.
-                Nulla vehicula nibh a pharetra lacinia. Vestibulum a magna est. Praesent placerat erat in dolor faucibus
-                sagittis. Cras pulvinar efficitur nibh, ut suscipit eros dictum non. Maecenas ultricies augue turpis,
-                sed
-                semper lorem lacinia vel. In ornare ex non luctus mollis.</p>
-        </article>
-        <article>
-            <h1>SPRINT 2</h1>
-            <p>
-
-                Sed ullamcorper elementum nunc at aliquam. Nullam ligula dui, placerat non lectus vitae, congue faucibus
-                arcu. Curabitur in elit vitae velit venenatis aliquet ac non erat. Mauris nisl ipsum, tempus placerat
-                neque
-                sit amet, bibendum aliquam augue. Aenean hendrerit quam vitae dictum feugiat. Nullam imperdiet nec elit
-                sit
-                amet cursus. Proin non elit eu nisi tempus eleifend. Aliquam erat volutpat. Pellentesque ut posuere
-                odio.
-                Maecenas eu ex in purus tempus elementum ut eget nisi.
-
-                Morbi finibus tellus urna, in vulputate massa egestas et. Quisque sit amet nibh ut felis ornare egestas
-                nec
-                vel sem. Cras eu venenatis ex, nec commodo augue. Mauris non dolor vitae nulla mollis tincidunt. Aenean
-                volutpat ipsum leo, quis gravida enim elementum in. Nulla accumsan, nulla eget semper hendrerit, urna
-                lectus
-                convallis massa, ut aliquam augue tellus sed libero. Duis vulputate faucibus risus non lobortis.
-
-                Duis elementum purus massa, ut commodo mi tempor non. Quisque pellentesque accumsan nibh ac ultricies.
-                Phasellus vestibulum tellus vestibulum lorem hendrerit, ac convallis tortor sollicitudin. Pellentesque a
-                mollis nisi, venenatis lacinia libero. Phasellus ut eros in ipsum fringilla suscipit. Pellentesque
-                habitant
-                morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec nec orci vitae metus
-                viverra
-                semper. Nam at tempor sapien. Vestibulum mi nibh, facilisis ac lobortis et, fermentum imperdiet ipsum.
-                Nunc
-                nisl leo, posuere a diam ac, imperdiet auctor dolor. Etiam ut laoreet quam, sed malesuada odio.
-                Vestibulum
-                ornare tortor lacinia magna euismod pellentesque. Donec vehicula ac lorem at eleifend.</p>
-        </article>
-    </section>
+    <h1 style="font-size: 60px; font-weight: bold;
+    font-style: italic;">Welcome</h1>
+    <a href="interactiveVisual.html" style="color: white;">interactiveVisual</a>
 
     <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="home.html">HOME</a>
-            <a href="#">DEV</a>
+            <a href="dev.html">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
             <a href="sco.html">SCO</a>
