--- a/dev.html
+++ b/dev.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <!-- BODY HEADER____________________________________________________________________________________________________________ -->
     <header>
         <div class="headercontainer">
@@ -90,17 +91,13 @@
                 ornare tortor lacinia magna euismod pellentesque. Donec vehicula ac lorem at eleifend.</p>
         </article>
     </section>
-
-    <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
-    <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-            <a href="home.html">HOME</a>
-            <a href="#">DEV</a>
+    <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
+    <div id="mySidenav" class="sidenav">
+        <a href="home.html">HOME</a>
+            <a href="dev.html">DEV</a>
             <a href="#">PTM</a>
             <a href="#">UX</a>
             <a href="sco.html">SCO</a>
-        </div>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
