--- a/sco.html
+++ b/sco.html
@@ -10,76 +10,81 @@
 </head>
 
 <body>
-    <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-    <header>
-        <div class="headercontainer">
-            <span class="navButton" onclick="openNav()">&#9776;</span>
-            <div class="logo">
-                <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
-                <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
+    <div id="main">
+        <!-- BODY HEADER____________________________________________________________________________________________________________ -->
+        <header>
+            <div class="headercontainer">
+                <span class="navButton" onclick="openNav()">&#9776;</span>
+                <div class="logo">
+                    <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
+                    <!-- <h1 style="color: white;">"LOGO"</h1> -->
+                    <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
+                </div>
+                <!-- <div class="headerplaceholder"></div> -->
             </div>
-            <!-- <div class="headerplaceholder"></div> -->
+        </header>
+
+        <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+
+        <div id="title">
+            SCO
         </div>
-    </header>
 
-    <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <section class="content">
+            <br />
 
-    <div id="title">
-        SCO
-    </div>
+            <section class="strategy">
+                <h3>Strategy</h3>
+                <article id="TargetAudience">
+                    <h4>Target Audience</h4>
+                    <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio,
+                        a
+                        mattis
+                        lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis
+                        risus.
+                        Nunc
+                        sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel
+                        pretium
+                        nec,
+                        consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem.
+                        Proin
+                        bibendum eros vel est iaculis faucibus.</p>
+                    <p>[place holder for target audience assignment]</p>
+                </article>
+            </section>
 
-    <section class="content">
-        <br />
+            <br />
 
-        <section class="strategy">
-            <h3>Strategy</h3>
-            <article id="TargetAudience">
-                <h4>Target Audience</h4>
-                <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio, a
-                    mattis
-                    lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis risus.
-                    Nunc
-                    sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel pretium
-                    nec,
-                    consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem.
-                    Proin
-                    bibendum eros vel est iaculis faucibus.</p>
-                <p>[place holder for target audience assignment]</p>
-            </article>
-        </section>
-
-        <br />
-
-        <section class="concepting">
-            <h3>Concepting</h3>
-            <section id="assignment1">
-                <h4>Visual Association</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
-                        facilisis a
-                        sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat. Integer id
-                        elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu sed
-                        volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
-                        pellentesque
-                        dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
-                        ultrices
-                        posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla felis.
-                        Pellentesque auctor tellus congue ornare fermentum.</p>
-                    <p>[Placeholder for flipbook]</p>
+            <section class="concepting">
+                <h3>Concepting</h3>
+                <section id="assignment1">
+                    <h4>Visual Association</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
+                            facilisis a
+                            sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
+                            Integer id
+                            elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
+                            sed
+                            volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
+                            pellentesque
+                            dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
+                            ultrices
+                            posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
+                            felis.
+                            Pellentesque auctor tellus congue ornare fermentum.</p>
+                        <p>[Placeholder for flipbook]</p>
+                </section>
             </section>
         </section>
-    </section>
+    </div>
 
-    <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
-    <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-            <a href="home.html">HOME</a>
-            <a href="dev.html">DEV</a>
-            <a href="#">PTM</a>
-            <a href="#">UX</a>
-            <a href="sco.html">SCO</a>
-        </div>
+    <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
+    <div id="mySidenav" class="sidenav">
+        <a href="home.html">HOME</a>
+        <a href="dev.html">DEV</a>
+        <a href="#">PTM</a>
+        <a href="#">UX</a>
+        <a href="sco.html">SCO</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
