--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -6,37 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,700,700i&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-    <header style="position: fixed; border-bottom: 0px;">
-        <div class="headercontainer">
-            <span class="navButton" onclick="openNav()">&#9776;</span>
-            <div class="logo">
-                <!-- <div class="logo"><a href="home.html" style="font-size: 38px; text-decoration: none;">Arsitech</a></div> -->
-                <!-- <h1 style="color: white;">Arsitech</h1> -->
-                <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
+        <!-- BODY HEADER____________________________________________________________________________________________________________ -->
+        <header style="position: fixed; border-bottom: 0px;">
+            <div class="headercontainer">
+                <a href="home.html" style="font-size: 60px; text-decoration:none; color: rgba(0, 0, 0, 1); margin-left: 20px;">x</a>
             </div>
-            <!-- <div class="headerplaceholder"></div> -->
-        </div>
-    </header>
+        </header>
 
-    <iframe src="visual1.html" frameborder="0" scrolling="no"></iframe>
+        <iframe src="visual1.html" frameborder="0" scrolling="no"></iframe>
 
-    <!-- OVERLAY MENU____________________________________________________________________________________________________________ -->
-    <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="overlay-content">
-            <a href="home.html">HOME</a>
-            <a href="dev.html">DEV</a>
-            <a href="ux.html">UX</a>
-            <a href="sco.html">SCO</a>
-            <a href="ptm.html">PTM</a>
-        </div>
-    </div>
-    
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script> -->
