--- a/home.html
+++ b/home.html
@@ -15,19 +15,19 @@
     <div id="main">
     
     <header>
-        <div class="headercontainer">
+        <!-- <div class="headercontainer"> -->
             <button class="hamburger hamburger--collapse" type="button">
                     <span class="hamburger-box">
                       <span class="hamburger-inner"></span>
                     </span>
                   </button>
-            <div class="logo">
+            <!-- <div class="logo"> -->
                 <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
                 <!-- <h1 style="color: white;">"LOGO"</h1> -->
                 <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
-            </div>
-            <div class="headerplaceholder"></div>
-        </div>
+            <!-- </div> -->
+            <!-- <div class="headerplaceholder"></div> -->
+        <!-- </div> -->
     </header>
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
