--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -12,9 +12,9 @@
 
 <body>
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-        <header style="position: fixed; border-bottom: 0px;">
+        <header style="border-bottom: 0px;background: none;">
             <div class="headercontainer">
-                <a href="home.html" style="font-size: 60px; text-decoration:none; color: rgba(0, 0, 0, 1); margin-left: 20px;">x</a>
+                <a href="home.html" style="font-size: 60px; text-decoration:none; color: rgba(0, 0, 0, 0.5); margin-left: 20px;">x</a>
             </div>
         </header>
 
