--- a/home.html
+++ b/home.html
@@ -13,45 +13,49 @@
 <body>
     <!-- BODY HEADER____________________________________________________________________________________________________________ -->
     <div id="main">
-    
-    <header>
-        <!-- <div class="headercontainer"> -->
+        <header>
+            <!-- <div class="headercontainer"> -->
             <button class="hamburger hamburger--collapse" type="button">
-                    <span class="hamburger-box">
-                      <span class="hamburger-inner"></span>
-                    </span>
-                  </button>
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
             <!-- <div class="logo"> -->
-                <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
-                <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
+            <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
+            <!-- <h1 style="color: white;">"LOGO"</h1> -->
+            <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             <!-- </div> -->
             <!-- <div class="headerplaceholder"></div> -->
-        <!-- </div> -->
-    </header>
+            <!-- </div> -->
+        </header>
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-        <h1 style="font-size: 60px; font-weight: bold;
-    font-style: italic;">Welcome</h1>
-        <a href="interactiveVisual.html" style="color: white;">interactiveVisual</a>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sagittis lorem finibus, mollis dui sed, consectetur leo. Nullam bibendum lacus dui, quis vehicula ligula consectetur in. Duis tellus orci, condimentum at vehicula commodo, scelerisque vitae libero. Integer libero ligula, sodales sed sodales at, sollicitudin id purus. Proin porttitor eros vel libero tempus feugiat. Suspendisse eget libero congue, sollicitudin lorem sit amet, hendrerit odio. Duis varius odio in dolor molestie facilisis. Aenean sed augue velit. Suspendisse sollicitudin ornare nisi non interdum.
+        <!-- Content -->
+        <section>
+            <h1
+                style="font-size: 50px; font-weight: bold;
+    font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold;color: rgba(255, 255, 255, 0.7);">
+                Under construction.</h1>
+            <p>This site is in development. Your consideration will be appreciated.</p>
+        </section>
 
-            Proin aliquet mi lorem, ac facilisis magna tempus eget. Suspendisse fermentum eros ut fermentum interdum. Aenean porttitor facilisis luctus. Vestibulum gravida dui non diam pharetra, nec rutrum augue dignissim. Nam aliquam ex sem. Vestibulum nunc sem, placerat et dignissim vitae, hendrerit nec elit. In id consectetur neque. Proin molestie enim vel ante laoreet, id mattis nisi luctus. Nulla sit amet ante ut orci aliquam posuere ac non turpis. Vestibulum vitae pretium nisl. Sed imperdiet ornare dui non mollis. Ut in laoreet ante.</p>
+        
+        <section class="content"><a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a></section>
     </div>
 
-    <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
+    <!-- Off-canvas menu -->
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
-            <a href="dev.html">Development</a>
-            <a href="#">Project</a>
-            <a href="#">UX</a>
-            <a href="sco.html">Strategy & Concepting</a>
+        <a href="dev.html">DEV</a>
+        <a href="#">P̶T̶M̶</a>
+        <a href="#">U̶X̶</a>
+        <a href="#">S̶C̶O̶</a>
     </div>
 
-    <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
-    <script src="js/OrbitControls.js"></script>
+    <!-- Scripts -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script> -->
+    <!-- <script src="js/OrbitControls.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 
