--- a/home.html
+++ b/home.html
@@ -37,11 +37,13 @@
                 style="font-size: 50px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold;color: rgba(255, 255, 255, 0.7);">
                 Under construction.</h1>
-            <p>This site is in development. Your consideration will be appreciated.</p>
+            <p>This site is in development. Your consideration will be appreciated.</p><a
+                href="interactiveVisual.html" style="color: white;">Link to the interactive
+            visual.</a>
         </section>
 
-        
-        <section class="content"><a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a></section>
+
+        <!-- <section class="content"></section> -->
     </div>
 
     <!-- Off-canvas menu -->
