--- a/dev.html
+++ b/dev.html
@@ -107,9 +107,9 @@
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
         <a href="dev.html">DEV</a>
-        <a href="#">PTM</a>
-        <a href="#">UX</a>
-        <a href="sco.html">SCO</a>
+        <a href="#" style="color:rgb(214, 214, 214);">PTM</a>
+        <a href="#" style="color:rgb(214, 214, 214);">UX</a>
+        <a href="#" style="color:rgb(214, 214, 214);">SCO</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
