--- a/home.html
+++ b/home.html
@@ -50,9 +50,9 @@
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
         <a href="dev.html">DEV</a>
-        <a href="#">P̶T̶M̶</a>
-        <a href="#">U̶X̶</a>
-        <a href="#">S̶C̶O̶</a>
+        <a href="#" style="color:rgb(214, 214, 214);">PTM</a>
+        <a href="#" style="color:rgb(214, 214, 214);">UX</a>
+        <a href="#" style="color:rgb(214, 214, 214);">SCO</a>
     </div>
 
     <!-- Scripts -->
