--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -14,7 +14,7 @@
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
         <header style="border-bottom: 0px;background: none;">
             <div class="headercontainer">
-                <a href="home.html" style="font-size: 60px; text-decoration:none; color: rgba(0, 0, 0, 0.5); margin-left: 20px;">x</a>
+                <a href="home.html" style="font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
             </div>
         </header>
 
