--- a/dev.html
+++ b/dev.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/layout.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
@@ -32,74 +31,16 @@
             
             <article>
                 <h2>SPRINT 0</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse odio ante, ornare sed sem a,
-                    fermentum
-                    volutpat nunc. Praesent ipsum dui, finibus sit amet sapien non, semper porttitor dui. Nunc consequat
-                    consectetur pulvinar. Mauris tincidunt condimentum porta. Curabitur eget nulla urna. Duis venenatis
-                    lobortis
-                    magna ut pulvinar. Duis quam quam, sodales eget purus nec, feugiat eleifend sem. Nam eget suscipit
-                    arcu.
-                    Vestibulum tincidunt faucibus nunc, vel placerat eros congue sit amet. Pellentesque non dignissim
-                    nisi,
-                    sed
-                    aliquam purus. Suspendisse porttitor risus tortor, vitae vulputate velit auctor ac. Morbi sagittis
-                    metus
-                    quis euismod varius. Integer commodo accumsan neque eu ullamcorper.
+                <p>During Sprint 0, it was a huge starting point for me. Throughout the summer i have been learning basic Front-End development course and in Sprint 0 i have been able to try applying my knowledge and started developing my portfolio by experimenting, trial and error. 
                 </p>
             </article>
             <article>
                 <h2>SPRINT 1</h2>
-                <p>
-
-                    Nulla convallis massa nibh, sit amet congue quam viverra bibendum. Praesent varius justo id egestas
-                    euismod.
-                    Nulla vehicula nibh a pharetra lacinia. Vestibulum a magna est. Praesent placerat erat in dolor
-                    faucibus
-                    sagittis. Cras pulvinar efficitur nibh, ut suscipit eros dictum non. Maecenas ultricies augue
-                    turpis,
-                    sed
-                    semper lorem lacinia vel. In ornare ex non luctus mollis.</p>
+                <p>In Sprint 1, my fundamental skill had developed well. The framework of my portfolio has been layed and during this time i took my oppurtunity to sharpen my Javascript skills by making visuals with the three.js library and to implement it unto my portfolio.</p>
             </article>
             <article>
                 <h2>SPRINT 2</h2>
-                <p>
-
-                    Sed ullamcorper elementum nunc at aliquam. Nullam ligula dui, placerat non lectus vitae, congue
-                    faucibus
-                    arcu. Curabitur in elit vitae velit venenatis aliquet ac non erat. Mauris nisl ipsum, tempus
-                    placerat
-                    neque
-                    sit amet, bibendum aliquam augue. Aenean hendrerit quam vitae dictum feugiat. Nullam imperdiet nec
-                    elit
-                    sit
-                    amet cursus. Proin non elit eu nisi tempus eleifend. Aliquam erat volutpat. Pellentesque ut posuere
-                    odio.
-                    Maecenas eu ex in purus tempus elementum ut eget nisi.
-
-                    Morbi finibus tellus urna, in vulputate massa egestas et. Quisque sit amet nibh ut felis ornare
-                    egestas
-                    nec
-                    vel sem. Cras eu venenatis ex, nec commodo augue. Mauris non dolor vitae nulla mollis tincidunt.
-                    Aenean
-                    volutpat ipsum leo, quis gravida enim elementum in. Nulla accumsan, nulla eget semper hendrerit,
-                    urna
-                    lectus
-                    convallis massa, ut aliquam augue tellus sed libero. Duis vulputate faucibus risus non lobortis.
-
-                    Duis elementum purus massa, ut commodo mi tempor non. Quisque pellentesque accumsan nibh ac
-                    ultricies.
-                    Phasellus vestibulum tellus vestibulum lorem hendrerit, ac convallis tortor sollicitudin.
-                    Pellentesque a
-                    mollis nisi, venenatis lacinia libero. Phasellus ut eros in ipsum fringilla suscipit. Pellentesque
-                    habitant
-                    morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec nec orci vitae metus
-                    viverra
-                    semper. Nam at tempor sapien. Vestibulum mi nibh, facilisis ac lobortis et, fermentum imperdiet
-                    ipsum.
-                    Nunc
-                    nisl leo, posuere a diam ac, imperdiet auctor dolor. Etiam ut laoreet quam, sed malesuada odio.
-                    Vestibulum
-                    ornare tortor lacinia magna euismod pellentesque. Donec vehicula ac lorem at eleifend.</p>
+                <p>During Sprint 2, i took a step back as i realized that KISS or "Keep it simple and straightforward." is very important. I took my time to clean my syntax and to try to make pragmatics as clear as possible.</p>
             </article>
         </section>
     </div>
