--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -5,7 +5,7 @@
     <title>Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,700,700i&display=swap"
         rel="stylesheet">
 </head>
