--- a/home.html
+++ b/home.html
@@ -24,7 +24,9 @@
             <!-- <h1 style="color: white;">"LOGO"</h1> -->
             <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
             <!-- </div> -->
-            <!-- <div class="headerplaceholder"></div> -->
+            <div class="headerplaceholder"></div>
+            <div class="headerplaceholder"></div>
+
             <!-- </div> -->
         </header>
 
