--- a/dev.html
+++ b/dev.html
@@ -23,12 +23,11 @@
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-        <div id="title" title="Development">
-                DEV
+        <div id="title">
+                Development
             </div>
 
         <section class="content">
-            
             <article>
                 <h2>SPRINT 0</h2>
                 <p>During Sprint 0, it was a huge starting point for me. Throughout the summer i have been learning basic Front-End development course and in Sprint 0 i have been able to try applying my knowledge and started developing my portfolio by experimenting, trial and error. 
@@ -47,10 +46,10 @@
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
-        <a href="dev.html">DEV</a>
-        <a href="#" style="color:rgb(214, 214, 214);">PTM</a>
+        <a href="dev.html">Development</a>
         <a href="#" style="color:rgb(214, 214, 214);">UX</a>
-        <a href="#" style="color:rgb(214, 214, 214);">SCO</a>
+        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
+        <a href="#" style="color:rgb(214, 214, 214);">Strategy & Concept</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
