--- a/home.html
+++ b/home.html
@@ -50,10 +50,10 @@
     <!-- Off-canvas menu -->
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
-        <a href="dev.html">DEV</a>
-        <a href="#" style="color:rgb(214, 214, 214);">PTM</a>
+        <a href="dev.html">Development</a>
         <a href="#" style="color:rgb(214, 214, 214);">UX</a>
-        <a href="#" style="color:rgb(214, 214, 214);">SCO</a>
+        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
+        <a href="#" style="color:rgb(214, 214, 214);">Strategy & Concept</a>
     </div>
 
     <!-- Scripts -->
